--- a/.github/workflows/Workflow-demo1.yml
+++ b/.github/workflows/Workflow-demo1.yml
@@ -2,13 +2,24 @@ name: Workflow Demo 1
 on: [push]
 
 jobs:
-    run-shell-commands:
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout repository
-              run: echo "hello world"
+  run-shell-commands:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repository
+        run: echo "hello world"
 
-            - name: Multiline command
-              run: |
-                  node -v
-                  npm -v
+      - name: Multiline command
+        run: |
+          node -v
+          npm -v
+  parallel-job-macos:
+    runs-on: macos-latest
+    steps:
+      - name: View SW Version
+        run: sw_vers
+  dependent-job:
+    runs-on: windows-latest
+    needs: [run-shell-commands]
+    steps:
+      - name: Echo a string
+        run: Write-Output "Windows String"
