--- a/.github/workflows/Workflow-demo3.yml
+++ b/.github/workflows/Workflow-demo3.yml
@@ -9,12 +9,13 @@ jobs:
               run: ls -la
             - name: Checkout Repository
               run: |
-                  #   git init
-                  #   git remote add origin "https://$GITHUB_ACTOR:$((
-                  #       secrets.GITHUB_TOKEN
-                  #   ))@github.com/$GITHUB_REPOSITORY.git"
-                  #   git fetch origin
-                  #   git checkout main
-                  git clone https://github.com/class-org89/workflow-demo.git
+                  git init
+                  git remote add origin "https://$GITHUB_ACTOR:${{
+                      secrets.GITHUB_TOKEN
+                  }}@github.com/$GITHUB_REPOSITORY.git"
+                  git fetch origin
+                  git checkout main
+              #   git clone https://github.com/class-org89/workflow-demo.git
+              #   cd workflow-demo
             - name: List Files After Checkout
               run: ls -la
