--- a/.github/workflows/Workflow-demo7.yml
+++ b/.github/workflows/Workflow-demo7.yml
@@ -7,11 +7,11 @@ on:
     push:
         branches:
             - main
-            - "feature/*"
-            - "feature/**"
-            - "!feature/featA"
+            - "feature/*" #mathces feature/something not feature/something/something
+            - "feature/**" # #mathces feature/something/something not feature/something
+            - "!feature/featA" # exclude "!feature/featA
         tags:
-            - "v1.*"
+            - "v1.*" # all tags starting with v1.
             - "!v1.5"
         paths:
             - "app/*"
