--- a/.github/workflows/Workflow-demo8.yml
+++ b/.github/workflows/Workflow-demo8.yml
@@ -1,8 +1,8 @@
 name: Stale issues and PRs
 on:
     schedule:
-        - cron: "0 14 * * *" # everyday at 2pm
-        - cron: "0/5 * * * *" #every 5 min
+        # - cron: "0 14 * * *" # everyday at 2pm
+        - cron: "0/1 * * * *" #every 1 min
 
 jobs:
     stale:
