--- a/.github/workflows/Workflow-demo9.yml
+++ b/.github/workflows/Workflow-demo9.yml
@@ -5,6 +5,7 @@ run-name: "Expressions and Contexts by @${{github.actor}}, event: ${{github.even
 jobs:
     using-expressions-and-events:
         runs-on: ubuntu-latest
+        if: github.event_name == 'issues'
         steps:
             - name: Expression
               id: expressions
