--- a/.github/workflows/Workflow-demo9.yml
+++ b/.github/workflows/Workflow-demo9.yml
@@ -1,8 +1,15 @@
 name: Expression & Contexts
-on: [push, pull_request, issues]
+on: [pull_request, issues]
 run-name: "Expressions and Contexts by @${{github.actor}}, event: ${{github.event_name}}"
 
 jobs:
+    runs-on-issues-and-prs:
+        runs-on: ubnutu-latest
+        if: github.event_name == 'issues' || github.event_name == 'pull_request'
+        steps:
+            - name: Run only if issue has a bug label
+              if: contains(github.event.issue.labels.*.name, 'bug')
+              run: echo ${{join(github.event.issue.labels.*.name, ', ')}}
     using-expressions-and-events:
         runs-on: ubuntu-latest
         if: github.event_name == 'issues'
