--- a/.github/workflows/Workflow-demo9.yml
+++ b/.github/workflows/Workflow-demo9.yml
@@ -18,7 +18,7 @@ jobs:
               run: echo ${{join(github.event.issue.labels.*.name, ', ')}}
     using-expressions-and-events:
         runs-on: ubuntu-latest
-        if: github.event_name == 'issues'
+        if: github.event_name == 'push'
         steps:
             - name: Expression
               id: expressions
